--- a/CourseProject/CourseProject.Manager/CourseProject.Manager.csproj
+++ b/CourseProject/CourseProject.Manager/CourseProject.Manager.csproj
@@ -17,6 +17,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Serilog" Version="2.11.0-dev-01380" />
+      <PackageReference Include="Serilog.AspNetCore" Version="4.1.1-dev-00250" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.2-dev-00890" />
     </ItemGroup>
 
