--- a/CourseProject/CourseProject.Worker/CourseProject.Worker.csproj
+++ b/CourseProject/CourseProject.Worker/CourseProject.Worker.csproj
@@ -10,15 +10,19 @@
     <ItemGroup>
       <PackageReference Include="Confluent.Kafka" Version="1.8.2" />
       <PackageReference Include="Google.Protobuf" Version="3.19.3" />
-      <PackageReference Include="Grpc.AspNetCore" Version="2.42.0" />
       <PackageReference Include="Grpc.Net.Client" Version="2.42.0" />
       <PackageReference Include="Grpc.Tools" Version="2.43.0">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Serilog" Version="2.11.0-dev-01380" />
-      <PackageReference Include="Serilog.AspNetCore" Version="4.1.1-dev-00250" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.2-dev-00890" />
     </ItemGroup>
+
+    <Target Name="Codegen">
+        <Exec Command="mkdir -p Protobuf" />
+        <Exec Command="protoc --proto_path=../contracts --csharp_out=Protobuf ../contracts/tree.proto" />
+        <Exec Command="protoc --proto_path=../contracts --csharp_out=Protobuf ../contracts/worker.proto" />
+    </Target>
 
 </Project>
